--- a/css/style.css
+++ b/css/style.css
@@ -4,31 +4,58 @@
   box-sizing: border-box; }
 
 html, body {
-  width: 100%;
-  height: 100%; }
+  background-color: #D75D6A; }
+
+label {
+  color: #D75D6A; }
+
+h3 {
+  color: #D75D6A; }
 
 hr {
-  background-color: dimgray;
+  background-color: #D75D6A;
   height: 1px; }
   hr .light {
     background-color: #E6E6E6; }
+
+.btn:hover {
+  color: #E6E6E6;
+  background-color: black; }
+
+.link {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #D75D6A; }
 
 .height-center {
   margin-top: 250px;
   height: 400px; }
 
+.form-control.input-custom:focus {
+  border-color: #D75D6A;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #D75D6A; }
+
 .btn.btn-login {
+  margin-top: 5px;
+  margin-bottom: 5px;
   border-radius: 5px;
   border-style: solid;
-  border-width: 2px;
-  color: #E6E6E6;
-  background-color: #751300;
-  border-color: #E6E6E6; }
+  border-width: 1px;
+  color: #D75D6A;
+  background-color: #FAF5F1;
+  border-color: #D75D6A; }
+
+.btn.btn-login.btn-custom:hover {
+  color: #FAF5F1;
+  background-color: #D75D6A;
+  border-color: #FAF5F1; }
 
 .box {
-  background-color: #751300;
-  border-color: #E6E6E6;
-  color: #E6E6E6;
+  padding: 20px 50px 20px 50px;
+  background-color: #FAF5F1;
+  border-color: #9D444E;
+  color: #111111;
+  box-shadow: 0px 0px 15px #9D444E;
   border-style: solid;
   border-width: 1px; }
 
