--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,6 @@ hr {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #D75D6A; }
 
 .btn.btn-login {
-  margin-top: 5px;
-  margin-bottom: 5px;
   border-radius: 5px;
   border-style: solid;
   border-width: 1px;
@@ -50,13 +48,31 @@ hr {
   background-color: #D75D6A;
   border-color: #FAF5F1; }
 
-.box {
-  padding: 20px 50px 20px 50px;
+.login-box,
+.register-box {
   background-color: #FAF5F1;
   border-color: #9D444E;
   color: #111111;
   box-shadow: 0px 0px 15px #9D444E;
   border-style: solid;
-  border-width: 1px; }
+  border-width: 1px;
+  width: 360px;
+  margin: 7% auto; }
+
+@media (max-width: 768px) {
+  .login-box,
+  .register-box {
+    width: 90%;
+    margin-top: 50px; } }
+.login-box-body,
+.register-box-body {
+  background: #fff;
+  padding: 20px;
+  border-top: 0;
+  color: #666; }
+
+.login-box-body .form-control-feedback,
+.register-box-body .form-control-feedback {
+  color: #777; }
 
 /*# sourceMappingURL=style.css.map */
