--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
   box-sizing: border-box; }
 
 html, body {
+  background-color: #FAF5F1; }
+
+html.login, body.login {
   background-color: #D75D6A; }
 
 label {
@@ -13,7 +16,7 @@ h3 {
   color: #D75D6A; }
 
 hr {
-  background-color: #D75D6A;
+  background-color: #FAF5F1;
   height: 1px; }
   hr .light {
     background-color: #E6E6E6; }
@@ -32,7 +35,7 @@ hr {
   height: 400px; }
 
 .form-control.input-custom:focus {
-  border-color: #D75D6A;
+  border-color: #FAF5F1;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #D75D6A; }
 
 .btn.btn-login {
@@ -50,7 +53,7 @@ hr {
 
 .login-box,
 .register-box {
-  background-color: #FAF5F1;
+  background-color: #D75D6A;
   border-color: #9D444E;
   color: #111111;
   box-shadow: 0px 0px 15px #9D444E;
