--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,23 @@ $break-large: 1200px;
   box-sizing: border-box;
 }
 
+.navbar-default .navbar-brand{
+  color: $background-main;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: $background-main;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+  background-color: $background-main;
+  color: $background-login;
+}
+
+.navbar {
+  background-color: $background-login;
+}
+
 html, body{
   background-color: $background-main;
 }
