--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,12 @@ hr {
   margin-top: 250px;
   height: 400px; }
 
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #FAF5F1; }
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+  background-color: #9D444E; }
+
 .form-control.input-custom:focus {
   border-color: #FAF5F1;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #D75D6A; }
