--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,6 +74,14 @@ hr {
   height: 400px;
 }
 
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: $background-main;
+}
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+  background-color: $color-box-shadow;
+}
+
 .form-control.input-custom:focus {
   border-color: $background-main;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px $background-login;
@@ -107,6 +115,7 @@ hr {
 }
 
 @media (max-width: 768px) {
+
   .login-box,
   .register-box {
     width: 90%;
