--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,27 @@
   padding: 0;
   box-sizing: border-box; }
 
+.box-wrapper {
+  padding: 15px;
+  border-color: #E4DFDC;
+  border-style: solid;
+  border-width: 0.5px;
+  min-height: 185px;
+  position: relative; }
+
+.h1, .h2, .h3, h1, h2, h3 {
+  margin-top: 10px; }
+
+.box-content {
+  padding: 5px;
+  height: 100%; }
+
+.nav-tabs.nav-justified > li > a {
+  color: #111111; }
+
+.nav-tabs > li.active > a {
+  background-color: #E4DFDC; }
+
 .navbar-default .navbar-brand {
   color: #FAF5F1; }
 
