--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 $background-main: #FAF5F1;
+$background-main-active: #E4DFDC;
 $background-login: #D75D6A;
 $color-font-light: #E6E6E6;
 $color-font-dark: #111111;
@@ -12,6 +13,32 @@ $break-large: 1200px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.box-wrapper {
+  padding: 15px;
+  border-color: $background-main-active;
+  border-style: solid;
+  border-width: 0.5px;
+  min-height: 185px;
+  position: relative;
+}
+
+.h1, .h2, .h3, h1, h2, h3 {
+  margin-top: 10px;
+}
+
+.box-content {
+  padding: 5px;
+  height: 100%;
+}
+
+.nav-tabs.nav-justified>li>a {
+  color: $color-font-dark;
+}
+
+.nav-tabs>li.active>a {
+  background-color: $background-main-active;
 }
 
 .navbar-default .navbar-brand{
