--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,6 +24,15 @@ $break-large: 1200px;
   position: relative;
 }
 
+.padding-default {
+  margin: 15px;
+}
+
+p.price {
+  color: $background-login;
+  font-size: x-large;
+}
+
 .h1, .h2, .h3, h1, h2, h3 {
   margin-top: 10px;
 }
