--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ html.login, body.login {
 label {
   color: #D75D6A; }
 
-h3 {
+h1, h3 {
   color: #D75D6A; }
 
 hr {
@@ -61,6 +61,9 @@ hr {
   height: 1px; }
   hr .light {
     background-color: #E6E6E6; }
+
+.btn {
+  margin-bottom: 5px; }
 
 .btn:hover {
   color: #E6E6E6;
